--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -2,9 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>ホーム画面</title>
 </head>
 <body>
-
+<h3>試験を選択してください</h3>
+<a href="">基本情報技術者試験</a>
+<br>
+<a href="">応用情報技術者試験</a>
+<br>
+<a href="">情報セキュリティマネジメント試験</a>
+<br>
+<a href="">ITパスポート</a>
+<br>
+<a href="">情報ストラテジー</a>
 </body>
 </html>
