--- a/src/main/resources/templates/useFlashcard.html
+++ b/src/main/resources/templates/useFlashcard.html
@@ -2,9 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>ログイン</title>
+<title>カード学習</title>
 </head>
 <body>
-
+<h1>学習</h1>
+問題：<div th:text="${question}"></div>
+解答：<input type=""
+解説：
 </body>
 </html>
