--- a/src/main/resources/templates/flashcard.html
+++ b/src/main/resources/templates/flashcard.html
@@ -2,9 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>フラッシュカード</title>
 </head>
 <body>
-
+<h1>フラッシュカード</h1>
+<a href="/flashcard/add">カードを新規作成</a>
+<a href="/flashcard/use">フラッシュカードで学習する</a>
 </body>
 </html>
