--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>試験を選択してください</h3>
-<a href="">基本情報技術者試験</a>
+<a href="/home">基本情報技術者試験</a>
 <br>
 <a href="">応用情報技術者試験</a>
 <br>
