--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,18 +9,20 @@
 
 <form action="/login">
 
-ユーザーID：<input type="text" name="userid" placeholder="ユーザーIDを入力してください">
+ユーザーID：<input type="text" name="userId" placeholder="ユーザーIDを入力してください">
 <br>
-パスワード：<input type="text" name="userid" placeholder="パスワードを入力してください">
+パスワード：<input type="password" name="password" placeholder="パスワードを入力してください">
 
 <br>
 
 <a href="/help">パスワードを忘れたら</a>
 
 <input type="submit" value="ログイン">
-
 <br>
+<span th:text="${message}" style="color:red"></span>
 </form>
+<br>
+
 <a href="/user/add">新規会員登録はこちらから</a>
 
 </body>
