--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,11 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+<h1>基本情報技術者試験</h1>
+<a href="/flashcard">フラッシュカード</a>
+<br>
+<a href="/test">過去問</a>
+<br>
+<a href="/tweet">掲示板</a>
 </body>
 </html>
