--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 <body>
 <h3>IPA 資格取得情報アプリ</h3>
 
-<form action="/login">
+<form action="/login" method="get">
 
 ユーザーID：<input type="text" name="userId" placeholder="ユーザーIDを入力してください">
 <br>
