--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -11,32 +11,35 @@
 
 
 <br>
-名前：<input type="text" name="name" placeholder="名前を入力してください">
+名前：<input type="text" name="name" placeholder="名前を入力してください" th:value=${name}>
 
 <br>
-ユーザーID：<input type="text" name="userId" placeholder="ユーザーIDを設定してください">
+ユーザーID：<input type="text" name="userId" placeholder="ユーザーIDを設定してください" th:value=${userId}>
 <br>
 
-メールアドレス：<input type="text" name="email" placeholder="メールアドレス">
+メールアドレス：<input type="text" name="mail" placeholder="メールアドレス" th:value=${mail}>
 
 <br>
-パスワード設定：<input type="password" name="password" placeholder="パスワードを設定してください">
+パスワード設定：<input type="password" name="password" placeholder="パスワードを設定してください" th:value=${secret}>
 <br>
-パスワード確認：<input type="password" name="passwordCheck" placeholder="設定したパスワードを入力してください">
+パスワード確認：<input type="password" name="passwordCheck" placeholder="設定したパスワードを入力してください" th:value=${secret}>
 <br>
 
 質問：<select name="q_number">
-<option>出身地は？</option>
-<option>好きな食べ物は？</option>
-<option>好きな色は？</option>
+<option value="a">出身地は？</option>
+<option value="b">好きな食べ物は？</option>
+<option value="c">好きな色は？</option>
 </select>
 
 <br>
-質問回答：<input type="text" name="answer" placeholder="回答を設定してください">
+質問回答：<input type="text" name="answer" placeholder="回答を設定してください" th:value=${secret}>
 <br>
 
 <input type="submit" value="新規登録">
 <span th:text="${message}" style="color:red"></span>
+<div th:text="${complete}" style="color:red"></div>
+<br>
+<a href="/">ログイン画面へ戻る</a>
 </form>
 </body>
 </html>
