--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 <h1>パスワードを忘れた方</h1>
-<form action="/help">
-名前：<input type="text" name="name" placeholder="名前を入力してください">
+<form action="/help" method="post">
+名前：<input type="text" name="name" placeholder="名前を入力してください" th:value=${name}>
 <br>
-メールアドレス：<input type="text" name="email" placeholder="メールアドレスを入力してください">
+メールアドレス：<input type="text" name="mail" placeholder="メールアドレスを入力してください" th:value=${mail}>
 <br>
 質問：<select name="q_number">
-<option>出身地は？</option>
-<option>好きな食べ物は？</option>
-<option>好きな色は？</option>
+<option value="a" >出身地は？</option>
+<option value="b" >好きな食べ物は？</option>
+<option value="c" >好きな色は？</option>
 </select>
 <br>
-質問の回答：<input type="text" name="name" placeholder="回答を入力してください">
+質問の回答：<input type="text" name="answer" placeholder="回答を入力してください" th:value=${answer}>
 <br>
 <input type="submit" value="送信">
 <br>
@@ -26,7 +26,10 @@
 
 </form>
 
-<br>
+<div th:text="${userId}"></div>
+<div th:text="${password}"></div>
 
+<br>
+<a href="/">ログイン画面へ戻る</a>
 </body>
 </html>
