--- a/src/main/resources/templates/flashcard.html
+++ b/src/main/resources/templates/flashcard.html
@@ -5,6 +5,10 @@
 <title>フラッシュカード</title>
 </head>
 <body>
+
+<span th:replace="menu"></span>
+
+	<hr>
 <h1>フラッシュカード</h1>
 <a href="/flashcard/add">カードを新規作成</a>
 <a href="/flashcard/use">フラッシュカードで学習する</a>
