--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -5,6 +5,9 @@
 <title>ホーム画面</title>
 </head>
 <body>
+<span th:replace="menu"></span>
+
+	<hr>
 <h3>試験を選択してください</h3>
 <a href="/home">基本情報技術者試験</a>
 <br>
