--- a/src/main/resources/templates/tweet.html
+++ b/src/main/resources/templates/tweet.html
@@ -5,6 +5,9 @@
 <title>掲示板</title>
 </head>
 <body>
+<span th:replace="menu"></span>
+
+	<hr>
 <h1>掲示板</h1>
 <table border="1">
     <tr><td>投稿内容一覧</td></tr>
