--- a/src/main/resources/templates/useFlashcard.html
+++ b/src/main/resources/templates/useFlashcard.html
@@ -5,6 +5,10 @@
 <title>カード学習</title>
 </head>
 <body>
+
+<span th:replace="menu"></span>
+
+	<hr>
 <h1>学習</h1>
 問題：<div th:text="${question}"></div>
 
