--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
+<span th:replace="menu"></span>
+
+	<hr>
 <h1>基本情報技術者試験</h1>
 <a href="/flashcard">フラッシュカード</a>
 <br>
