--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -5,6 +5,9 @@
 <title>過去問ホーム</title>
 </head>
 <body>
+<span th:replace="menu"></span>
+
+	<hr>
 <h1>過去問題集</h1>
 <a href="/test/use">過去の問題を解く</a>
 </body>
