--- a/src/main/resources/templates/useTest.html
+++ b/src/main/resources/templates/useTest.html
@@ -5,6 +5,11 @@
 <title>過去問</title>
 </head>
 <body>
+
+<span th:replace="menu"></span>
+
+	<hr>
+
 <h1>過去問題</h1>
 問題：<div th:text="${question}"></div>
 
