--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,4 +1,4 @@
 <a href="javascript:history.back();">戻る</a>
-<a href="/top">TOP</a>
+<a href="/home">TOP</a>
 <span th:text="'（'+${session.userInfo.name}+' さんがログイン中）'"></span>
 <a href="/logout">ログアウト</a>
