--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>過去問ホーム</title>
+<link href="test.css" rel="stylesheet">
 </head>
 <body>
 <span th:replace="menu"></span>
