--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -3,21 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <title>IPA 資格取得情報アプリ</title>
+<link href="help.css" rel="stylesheet">
 </head>
 <body>
+
 <h1>パスワードを忘れた方</h1>
+<div id="inputField">
 <form action="/help" method="post">
-名前：<input type="text" name="name" placeholder="名前を入力してください" th:value=${name}>
+<label>名前：</label><input type="text" name="name" placeholder="名前" th:value=${name}>
 <br>
-メールアドレス：<input type="text" name="mail" placeholder="メールアドレスを入力してください" th:value=${mail}>
+<label>メールアドレス：</label><input type="text" name="mail" placeholder="メールアドレス" th:value=${mail}>
 <br>
-質問：<select name="q_number">
+<label id="q_number">質問：</label>
+<select name="q_number">
 <option value="a" >出身地は？</option>
 <option value="b" >好きな食べ物は？</option>
 <option value="c" >好きな色は？</option>
 </select>
 <br>
-質問の回答：<input type="text" name="answer" placeholder="回答を入力してください" th:value=${answer}>
+<label>質問の回答：</label><input type="text" name="answer" placeholder="回答" th:value=${answer}>
 <br>
 <input type="submit" value="送信">
 <br>
@@ -25,6 +29,8 @@
 
 
 </form>
+
+</div>
 
 <div th:text="${userId}"></div>
 <div th:text="${password}"></div>
