--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link href="home.css" rel="stylesheet">
 </head>
 <body>
 <span th:replace="menu"></span>
