--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>IPA 資格取得情報アプリ</title>
-<link href="help.css" rel="stylesheet">
+<link href="/css/help.css" rel="stylesheet">
 </head>
 <body>
 
