--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>ログイン画面</title>
 
-<link href="login.css" rel="stylesheet">
+<link href="/css/login.css" rel="stylesheet">
 </head>
 <body>
 <h3>IPA 資格取得情報アプリ</h3>
