--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -4,44 +4,37 @@
 <meta charset="UTF-8">
 <title>新規登録画面</title>
 
-<link href="addUser.css" rel="stylesheet">
+<link href="/css/addUser.css" rel="stylesheet">
 
 </head>
 <body>
-<h1>新規登録画面</h1>
-<form action="/user/add" method="post">
+	<h1>新規登録画面</h1>
+	<form action="/user/add" method="post">
+		<br>
+		<div id="inputField">
 
+			<label>名前：</label><input type="text" name="name"
+				placeholder="名前を入力してください" th:value=${name}> <br> <label>ユーザーID：</label><input
+				type="text" name="userId" placeholder="ユーザーIDを設定してください"
+				th:value=${userId}> <br> <label>メールアドレス：</label><input
+				type="text" name="mail" placeholder="メールアドレスを入力してください"
+				th:value=${mail}> <br> <label>パスワード設定：</label><input
+				type="password" name="password" placeholder="パスワードを設定してください"
+				th:value=${secret}> <br> <label>パスワード確認：</label><input
+				type="password" name="passwordCheck"
+				placeholder="もう一度パスワードを入力してください" th:value=${secret}> <br>
 
-<br>
-名前：<input type="text" name="name" placeholder="名前を入力してください" th:value=${name}>
-
-<br>
-ユーザーID：<input type="text" name="userId" placeholder="ユーザーIDを設定してください" th:value=${userId}>
-<br>
-
-メールアドレス：<input type="text" name="mail" placeholder="メールアドレスを入力してください" th:value=${mail}>
-
-<br>
-パスワード設定：<input type="password" name="password" placeholder="パスワードを設定してください" th:value=${secret}>
-<br>
-パスワード確認：<input type="password" name="passwordCheck" placeholder="もう一度パスワードを入力してください" th:value=${secret}>
-<br>
-
-質問：<select name="q_number">
-<option value="a">出身地は？</option>
-<option value="b">好きな食べ物は？</option>
-<option value="c">好きな色は？</option>
-</select>
-
-<br>
-質問回答：<input type="text" name="answer" placeholder="回答を設定してください" th:value=${secret}>
-<br>
-
-<input type="submit" value="新規登録">
-<span th:text="${message}" style="color:red"></span>
-<div th:text="${complete}" style="color:red"></div>
-<br>
-<a href="/">ログイン画面へ戻る</a>
-</form>
+			<label id="q_number">質問：</label><select name="q_number">
+				<option value="a">出身地は？</option>
+				<option value="b">好きな食べ物は？</option>
+				<option value="c">好きな色は？</option>
+			</select> <br> <label>質問回答：</label><input type="text" name="answer"
+				placeholder="回答を設定してください" th:value=${secret}> <br> <input
+				type="submit" value="新規登録"> <span th:text="${message}"
+				style="color: red"></span>
+			<div th:text="${complete}" style="color: red"></div>
+		</div>
+		<br> <a href="/">ログイン画面へ戻る</a>
+	</form>
 </body>
 </html>
