--- a/src/main/resources/templates/flashcard.html
+++ b/src/main/resources/templates/flashcard.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>フラッシュカード</title>
-<link href="flashcard.css" rel="stylesheet">
+<link href="/css/flashcard.css" rel="stylesheet">
 </head>
 <body>
 
