--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,19 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link href="home.css" rel="stylesheet">
+<link href="/css/home.css" rel="stylesheet">
 </head>
 <body>
 <span th:replace="menu"></span>
 
 	<hr>
 <h1>基本情報技術者試験</h1>
-<a href="/flashcard">フラッシュカード</a>
+<a href="/flashcard" class="url">フラッシュカード</a>
 <br>
-<a href="/test">過去問</a>
+<a href="/test" class="url">過去問</a>
 <br>
-<a href="/tweet">掲示板</a>
+<a href="/tweet" class="url">掲示板</a>
 <br>
-<a href="/book">おすすめの参考書</a>
+<a href="/book" class="url">おすすめの参考書</a>
 </body>
 </html>
