--- a/src/main/resources/static/css/addBook.css
+++ b/src/main/resources/static/css/addBook.css
@@ -1,5 +1,43 @@
 @charset "UTF-8";
-
 body{
 	text-align:center
+}
+
+input.star{
+  display: none;
+}
+
+
+label.star {
+  float: right;
+  padding: 10px;
+  font-size: 36px;
+  color: #444;
+  transition: all .2s;
+}
+
+input.star:checked ~ label.star:before { /*５星の時は色が濃い */
+content:'☆';
+  color:#FE7;
+  transition: all .25s;
+}
+
+
+input.star-5:checked ~ label.star:before { /* 普通の星は黄色 */
+  color: #FD4;
+  text-shadow: 0 0 20px #952;
+}
+
+input.star-1:checked ~ label.star:before { /*　一つ星だと色がオレンジに */
+  color:#FE7;
+  text-shadow: 0 0 20px #952;
+	color: #F62;
+}
+
+label.star:hover{  /*カーソル合わせるとちょっと動く */
+  transform: rotate(-15deg) scale(1.3);
+}
+
+label.star:before{
+content:'☆';
 }
