--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -2,6 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<link href="/css/addBook.css" rel="stylesheet">
+
 <title>参考書登録</title>
 </head>
 <body>
@@ -15,8 +17,25 @@
 <br>
 *値段：<input type="text" name="price" th:value=${price}>
 <br>
+星評価をつけてください
+<div class="cont">
+<div class="stars">
+  <input class="star star-5" id="star-5" type="radio" name="star"/>
+  <label class="star star-5" for="star-5"></label>
+  <input class="star star-4" id="star-4" type="radio" name="star"/>
+  <label class="star star-4" for="star-4"></label>
+  <input class="star star-3" id="star-3" type="radio" name="star"/>
+  <label class="star star-3" for="star-3"></label>
+  <input class="star star-2" id="star-2" type="radio" name="star"/>
+  <label class="star star-2" for="star-2"></label>
+  <input class="star star-1" id="star-1" type="radio" name="star"/>
+  <label class="star star-1" for="star-1"></label>
+</div>
+</div>
+<br>
 本に関するコメント（任意）：<input type="text" name="comment" th:value=${comment}>
 <br>
+
 <input type="submit" value="登録">
 </form>
 <div th:text="${complete}"></div>
