--- a/src/main/resources/static/css/addFlashcard.css
+++ b/src/main/resources/static/css/addFlashcard.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
 body{
-	text-align:center!important;
+	text-align:center;
+	background:linear-gradient(#00ced1,#e0ffff,#00ced1);
 }
+
+
