--- a/src/main/resources/static/css/useFlashcard.css
+++ b/src/main/resources/static/css/useFlashcard.css
@@ -1,5 +1,20 @@
 @charset "UTF-8";
 
 body{
-	text-align:center
+	text-align:center;
+	background:linear-gradient(#00ced1,#e0ffff,#00ced1);
+	font-size:15px
+}
+
+
+#question {
+	font-size: 30px;
+}
+
+#questionText {
+	text-decoration: underline
+}
+
+#answer {
+	font-weight: bold
 }
