--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,5 +1,5 @@
 
-<a href="javascript:history.back();" style="text-decoration:none">戻る</a>
-<a href="/home" style="text-decoration:none">TOP</a>
+<a href="javascript:history.back();" style="text-decoration:none"><span style="float:left">戻る</span></a>
+<a href="/home" style="text-decoration:none"><span style="float:left">TOP</span></a>
 <span th:text="'（'+${session.userInfo.name}+' さんがログイン中）'"></span>
-<a href="/logout" style="text-decoration:none">ログアウト</a>
+<a href="/logout" style="text-decoration:none"><span style="float:right">ログアウト</span></a>
