--- a/src/main/resources/static/css/addUser.css
+++ b/src/main/resources/static/css/addUser.css
@@ -1,10 +1,9 @@
 @charset "UTF-8";
+
 body {
-
-		text-align: center;
-	background:linear-gradient(#00ced1,#e0ffff,#00ced1);
-	font-size:15px;
-
+	text-align: center;
+	background: #f0fff0;
+	font-size: 15px;
 }
 
 label {
