--- a/src/main/resources/static/css/flashcard.css
+++ b/src/main/resources/static/css/flashcard.css
@@ -2,28 +2,27 @@
 
 body {
 	text-align: center;
-	background:linear-gradient(#00ced1,#e0ffff,#00ced1);
-	font-size:15px;
-
+	background: #f0fff0;
+	font-size: 15px;
 }
 
-.url{
-font-size:20px;
-text-decoration:none
-
+.url {
+	font-size: 20px;
+	text-decoration: none
 }
 
 .url::after {
-  border-bottom: solid 2px #8b008b;
-  bottom: 0;
-  content: "";
-  display: block;
-  transition: all .3s ease;
-  -webkit-transition: all .3s ease;
-  width: 0;
+	border-bottom: solid 2px #8b008b;
+	bottom: 0;
+	content: "";
+	display: block;
+	transition: all .3s ease;
+	-webkit-transition: all .3s ease;
+	width: 0;
 }
+
 .url:hover::after {
-  width: 100%;
+	width: 100%;
 }
 /*.url:hover{
 text-decoration:underline;
@@ -31,6 +30,3 @@ color:#8b008b;
 
 }
 */
-
-
-
