--- a/src/main/resources/static/css/useFlashcard.css
+++ b/src/main/resources/static/css/useFlashcard.css
@@ -1,11 +1,10 @@
 @charset "UTF-8";
 
-body{
-	text-align:center;
-	background:linear-gradient(#00ced1,#e0ffff,#00ced1);
-	font-size:15px
+body {
+	text-align: center;
+	background: #f0fff0;
+	font-size: 15px
 }
-
 
 #question {
 	font-size: 30px;
