--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,12 +10,11 @@
 
 	<hr>
 <h1>基本情報技術者試験</h1>
-<a href="/flashcard" class="url">フラッシュカード</a>
 <br>
-<a href="/test" class="url">過去問</a>
+<a href="/flashcard" class="url" id="flashcard">フラッシュカード</a>
+<a href="/test" class="url" id="test">過去問</a>
 <br>
-<a href="/tweet" class="url">掲示板</a>
-<br>
-<a href="/book" class="url">おすすめの参考書</a>
+<a href="/tweet" class="url" id="tweet">掲示板</a>
+<a href="/book" class="url" id="book">おすすめの参考書</a>
 </body>
 </html>
