--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -20,8 +20,8 @@
 				type="text" name="mail" placeholder="メールアドレスを入力してください"
 				th:value=${mail}> <br> <label>パスワード設定：</label><input
 				type="password" name="password" placeholder="パスワードを設定してください"
-				th:value=${secret}> <br> <label>パスワード確認：</label><input
-				type="password" name="passwordCheck"
+				th:value=${secret}> <br> <label>パスワード確認：</label>
+				<input type="password" name="passwordCheck"
 				placeholder="もう一度パスワードを入力してください" th:value=${secret}> <br>
 
 			<label id="q_number">質問：</label><select name="q_number">
