--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
 <a href="/flashcard" class="url" id="flashcard">フラッシュカード</a>
 <a href="/test" class="url" id="test">過去問</a>
 <br>
-<a href="/tweet" class="url" id="tweet">掲示板</a>
-<a href="/book" class="url" id="book">おすすめの参考書</a>
+<a href="/tweet" class="urlUnder" id="tweet">掲示板</a>
+<a href="/book" class="urlUnder" id="book">おすすめの参考書</a>
 </body>
 </html>
