--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 body {
+	margin:0;
 	text-align: center;
 	background:#f0fff0;
 	font-size:15px;
@@ -7,10 +8,10 @@ body {
 }
 
 h1{
+
 background-color:#fff;
 border:1px	#f3e6ff solid;
 
 }
-
 
 
