--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,5 +1,13 @@
 
-<a href="javascript:history.back();" style="text-decoration:none"><span style="float:left">戻る</span></a>
-<a href="/home" style="text-decoration:none"><span style="float:left">TOP</span></a>
-<span th:text="'（'+${session.userInfo.name}+' さんがログイン中）'"></span>
-<a href="/logout" style="text-decoration:none"><span style="float:right">ログアウト</span></a>
+<head>
+<link href="/css/menu.css" rel="stylesheet">
+
+</head>
+
+
+<a href="javascript:history.back();" style="text-decoration:none" id="back">戻る</a>
+<a href="/home" style="text-decoration:none" id="Top">TOP</a>
+<span id="title">基本情報技術者試験</span>
+<a href="/logout" style="text-decoration:none" id="logout">ログアウト</a>
+<span th:text="'（'+${session.userInfo.name}+' さんがログイン中）'" id="user"></span>
+
