--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -1,4 +1,52 @@
-.url{
-font-size:20px;
-text-decoration:none
+.url {
+	font-size: 20px;
+	text-decoration: none
+}
+
+div {  /*各spanのメニューに指定*/
+
+	width: 100%;
+	height: 70px;
+	background-color: #fff;
+}
+
+
+
+#back {
+	float: left;
+	padding-right:10px;
+	padding-bottom:20px;
+	padding-left:10px;
+}
+
+#Top {
+	float: left;
+	padding-right:10px;
+	padding-bottom:20px;
+	padding-left:10px;
+}
+
+#title {
+	float: center;
+	font-size: 20px;
+	padding-right:10px;
+	padding-bottom:20px;
+	padding-left:10px;
+}
+
+
+
+#user {
+	float:right;
+	padding-right:10px;
+	padding-bottom:20px;
+	padding-left:10px;
+}
+
+#logout {
+	float:right;
+	padding-right:10px;
+	padding-bottom:20px;
+	padding-left:10px;
+
 }
