--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,15 +6,13 @@
 <link href="/css/home.css" rel="stylesheet">
 </head>
 <body>
-<span th:replace="menu"></span>
+<div><span th:replace="menu"  class="menu"></span></div>
 
-	<hr>
-<h1>基本情報技術者試験</h1>
 <br>
-<a href="/flashcard" class="url" id="flashcard">フラッシュカード</a>
-<a href="/test" class="url" id="test">過去問</a>
+<a href="/flashcard" id="flashcard">フラッシュカード</a>
+<a href="/test" id="test">過去問</a>
 <br>
-<a href="/tweet" class="urlUnder" id="tweet">掲示板</a>
-<a href="/book" class="urlUnder" id="book">おすすめの参考書</a>
+<a href="/tweet" id="tweet">掲示板</a>
+<a href="/book" id="book">おすすめの参考書</a>
 </body>
 </html>
