--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -10,6 +10,8 @@
 
 	<hr>
 <h1>過去問題集</h1>
-<a href="/test/use">過去の問題を解く</a>
+<a href="/test/use">過去問を解く</a>
+<a href="/test/incorrect">過去に間違えた問題を解く</a>
+<a href="/test/incorrect2">過去に２回以上間違えた問題を解く</a>
 </body>
 </html>
