--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -9,15 +9,22 @@
 <span th:replace="menu"></span>
 <hr>
 <h1>みんなのおすすめ参考書一覧</h1>
+<br>
+<form action="/book/order/desc" method="get">
+<input type="submit" value="評価の高い順">
+</form>
+<form action="/book/order/review" method="get">
+<input type="submit" value="レビューの多い順">
+</form>
+<br>
 <table border="1">
-
 <tr>
     <th>参考書</th><th>値段</th><th>評価</th><th></th>
 </tr>
 
 <tr th:each="book:${books}">
 		<td th:text="${book.name}"></td>
-		<td th:text="${book.price}"></td>
+		<td th:text="${book.price}+'円'"></td>
 		<th:block th:if="${book.rate == 1}">
 		<td>★☆☆☆☆</td>
 		</th:block>
