--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -11,7 +11,6 @@
 	<hr>
 <h1>過去問題集</h1>
 <a href="/test/use">過去問を解く</a>
-<a href="/test/incorrect">過去に間違えた問題を解く</a>
-<a href="/test/incorrect2">過去に２回以上間違えた問題を解く</a>
+<a href="/test/incorrect">過去に間違えた問題を確認する</a>
 </body>
 </html>
