フラッシュカード

--- a/src/main/resources/templates/flashcard.html
+++ b/src/main/resources/templates/flashcard.html
@@ -11,7 +11,7 @@
 
 	<hr>
 <h1>フラッシュカード</h1>
-<a href="/flashcard/add" class="url"><span class="urlText">カードを新規作成</span></a>
+<a href="/flashcard/new/add" class="url"><span class="urlText">カードを新規作成</span></a>
 <br>
 <a href="/flashcard/use" class="url"><span class="urlText">フラッシュカードで学習する</span></a>
 </body>
