--- a/src/main/resources/static/css/addFlashcard.css
+++ b/src/main/resources/static/css/addFlashcard.css
@@ -1,7 +1,31 @@
 @charset "UTF-8";
 
-body{
-	text-align:center;
-background:#f0fff0}
+body {
+	text-align: center;
+	background: #f0fff0
+}
 
+#question {
+	resize: none; width : 400px;
+	height: 100px;
+	width: 400px; height : 100px;
+	font-size: 15px;
+}
 
+#answer {
+	width: 400px;
+	height: 50px;
+	font-size: 15px;
+}
+
+#explanation {
+	resize: none;
+	width: 400px;
+	height: 100px;
+	font-size: 15px;
+}
+
+#end{
+	float:right;
+	text-decoration:none;
+}
