--- a/src/main/resources/static/css/useFlashcard.css
+++ b/src/main/resources/static/css/useFlashcard.css
@@ -6,14 +6,28 @@ body {
 	font-size: 15px
 }
 
-#question {
-	font-size: 30px;
-}
 
 #questionText {
-	text-decoration: underline
+	display:inline-block;
+	 padding: 0.5em 1em;
+    margin: 2em 0;
+    color: #232323;
+    background: rgb(220, 220, 224);
+    border-left: solid 10px rgb(0, 128, 255);
 }
 
 #answer {
-	font-weight: bold
+	 padding: 0.5em 1em;
+    margin: 2em 0;
+    color: #232323;
+    background: rgb(220, 220, 224);
+    border-left: solid 10px rgb(0, 128, 255);
+}
+
+#explanation{
+	 padding: 0.5em 1em;
+    margin: 2em 0;
+    color: #232323;
+    background: rgb(220, 220, 224);
+    border-left: solid 10px rgb(0, 128, 255);
 }
