--- a/src/main/resources/templates/addFlashcard.html
+++ b/src/main/resources/templates/addFlashcard.html
@@ -12,18 +12,24 @@
 	<hr>
 <h1>カードの新規作成</h1>
 <form action="/flashcard/add" method="post">
-<textarea name="question" th:placeholder="問題文を入力" th:text="${question}"></textarea>
+<p th:text="${message}" style="color:red"></p>
+<textarea id="question" name="question" th:placeholder="問題文を入力" th:text="${question}"></textarea>
 <br>
-<input type="text" name="answer" th:placeholder="答えを入力" th:value=${answer}>
+<input type="text" id="answer" name="answer" th:placeholder="答えを入力" th:value=${answer}>
 <br>
 <br>
-<textarea name="explanation" th:placeholder="解説を入力" th:text="${question}"></textarea>
+<textarea id="explanation" name="explanation" th:placeholder="解説を入力" th:text="${question}"></textarea>
 
 <br>
 <br>
+<input type="reset" value="リセット">
 <input type="submit" value="作成">
+<br>
+
+
 </form>
+
 <a href="/flashcard/add"><span th:text="${next}"></span></a>
-<a href="/flashcard">終了する</a>
+<a href="/flashcard" id="end">終了する</a>
 </body>
 </html>
