--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,9 @@
 <div><span th:replace="menu"  class="menu"></span></div>
 
 <br>
-<a href="/flashcard" id="flashcard">フラッシュカード</a>
+<a href="/flashcard" id="flashcard">
+
+フラッシュカード</a>
 <a href="/test" id="test">過去問</a>
 <br>
 <a href="/tweet" id="tweet">掲示板</a>
