--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -1,56 +1,100 @@
-.url {
-	font-size: 20px;
-	text-decoration: none
+@use postcss-preset-env {
+  stage: 0;
+}
+.invisible {
+  left: -999px;
+  overflow: hidden;
+  position: absolute;
+  top: -999px;
 }
 
-div {  /*各spanのメニューに指定*/
-
-	width: 100%;
-	height: 70px;
-	background-color: #fff;
+.align {
+  display: grid;
+  place-items: center;
 }
 
-#back{
-	background-color: #ccffff;
-	border-radius: 5px;
-	padding: 10px;
-	text-decoration:none;
-	color:darkblue;
-	font-weight:bold;
+.sub-menu{
+	display: none;
+	overflow: hidden;
 }
 
-#Top {
-	background-color: #ffffcc;
-	border-radius: 5px;
-	padding: 10px;
-	text-decoration:none;
-	font-weight:bold;
-	padding-right:10px;
-	padding-bottom:20px;
-	padding-left:10px;
-}
-
-#title {
-	float: center;
-	font-size: 20px;
-	padding-right:10px;
-	padding-bottom:20px;
-	padding-left:10px;
+.menu-title:hover .sub-menu{
+	overflow: visible;
+	display: block;
 }
 
 
 
-#user {
-	float:right;
-	padding-right:10px;
-	padding-bottom:20px;
-	padding-left:10px;
+a {
+  color: inherit;
+  outline: 0;
+}
+.icons {
+  display: none;
 }
 
-#logout {
-	float:right;
-	padding-right:10px;
-	padding-bottom:20px;
-	padding-left:10px;
+.icon {
+  block-size: 1em;
+  display: inline-block;
+  fill: currentcolor;
+  inline-size: 1em;
+  vertical-align: middle;
+}
 
+.icon--2x {
+  font-size: 2rem;
+}
+
+
+svg {
+  max-inline-size: 100%;
+}
+
+
+:root {
+  --navigation-background-color: #97adc6;
+  --navigation-border-radius: 0.25em;
+
+  --navigation-anchor-padding: 1.5em;
+}
+
+.navigation {
+  color: white;
+  background-color: var(--navigation-background-color);
+  border-radius: var(--navigation-border-radius);
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
+}
+
+.navigation ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navigation a {
+  display: block;
+  padding: var(--navigation-anchor-padding);
+  position: relative;
+  text-decoration: none;
+}
+
+.navigation a:focus::after,
+.navigation a:hover::after {
+  opacity: 1;
+}
+
+.navigation a::after {
+  block-size: 100%;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
+  content: '';
+  inline-size: 100%;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  transition: opacity 0.3s;
+}
+
+.navigation--inline ul {
+  display: flex;
 }
