--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>おすすめ参考書</title>
+<link href="/css/book.css" rel="stylesheet">
 </head>
 <body>
 
@@ -17,7 +18,7 @@
 <input type="submit" value="レビューの多い順">
 </form>
 <br>
-<table border="1">
+<table border="1" align="center">
 <tr>
     <th>参考書</th><th>値段</th><th>評価</th><th></th>
 </tr>
