--- a/src/main/resources/templates/useTest.html
+++ b/src/main/resources/templates/useTest.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>過去問</title>
-<link href="useTest.css" rel="stylesheet">
+<link href="/css/useTest.css" rel="stylesheet">
 </head>
 <body>
 
@@ -21,10 +21,10 @@
 <br>
 <div th:text="${correct}"></div>
 <input type="submit" value="解答">
-解答：
+
 <div th:text="${answer}"></div>
 <br>
-解説：
+解説
 <div th:text="${explanation}"></div>
 </form>
 
