--- a/src/main/resources/static/css/addFlashcard.css
+++ b/src/main/resources/static/css/addFlashcard.css
@@ -13,15 +13,16 @@ body {
 }
 
 #answer {
-	width: 400px;
-	height: 50px;
+	resize: none; width : 400px;
+	height: 100px;
+	width: 400px; height : 100px;
 	font-size: 15px;
 }
 
 #explanation {
-	resize: none;
-	width: 400px;
+	resize: none; width : 400px;
 	height: 100px;
+	width: 400px; height : 100px;
 	font-size: 15px;
 }
 
