--- a/src/main/resources/static/css/book.css
+++ b/src/main/resources/static/css/book.css
@@ -1,8 +1,12 @@
 @charset "UTF-8";
 
-body{
-	text-align:center
+body {
+	text-align: center;
+	background: #f0fff0;
+	font-size: 15px;
 }
+
+
 .star-ratings-sprite {
 background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
 font-size: 0;
