--- a/src/main/resources/templates/incorrectDetail.html
+++ b/src/main/resources/templates/incorrectDetail.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>過去問</title>
+<link href="/css/incorrectDetail.css" rel="stylesheet">
 </head>
 <body>
 <span th:replace="menu"></span>
