--- a/src/main/resources/templates/incorrectTest.html
+++ b/src/main/resources/templates/incorrectTest.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>過去問</title>
-<link href="test.css" rel="stylesheet">
+<link href="/css/test.css" rel="stylesheet">
 </head>
 <body>
 	<span th:replace="menu"></span>
@@ -14,7 +14,7 @@
 	<br>
 	<div th:text="${none}"></div>
 
-	<table border="1">
+	<table border="1" align="center">
 		<tr th:each="test:${tests}">
 			<td th:text="${test.code}"></td>
 			<form action="/incorrect/detail" method="post">
