--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>プロフィール</title>
+<link href="/css/profile.css" rel="stylesheet">
 </head>
 <body>
 <span th:replace="menu"></span>
