--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>過去問ホーム</title>
-<link href="test.css" rel="stylesheet">
+<link href="/css/test.css" rel="stylesheet">
 </head>
 <body>
 <span th:replace="menu"></span>
 
-	<hr>
+
 <h1>過去問題集</h1>
 <a href="/test/use">過去問を解く</a>
 <a href="/test/incorrect">過去に間違えた問題を確認する</a>
