--- a/src/main/resources/static/css/tweet.css
+++ b/src/main/resources/static/css/tweet.css
@@ -5,6 +5,46 @@ body{
 	text-align:center;
 }
 
-#hart{
-	text-decoration:none;
+table{
+	width: 100%;
+	border-collapse: collapse;
+}
+
+tr{
+	border-bottom: solid 2px white;
+}
+
+tr:last-child{
+	border-bottom: none;
+}
+
+.userName{
+  position: relative;
+  text-align: left;
+  width: 30%;
+  background-color: #52c2d0;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+}
+.userName:after{
+  display: block;
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  top:calc(50% - 10px);
+  right:-10px;
+  border-left: 10px solid #52c2d0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+
+
+table {
+  text-align: center;
+  width: 70%;
+  text-align: center;
+  background-color: #eee;
+  padding: 10px 0;
 }
