--- a/src/main/resources/templates/tweet.html
+++ b/src/main/resources/templates/tweet.html
@@ -3,29 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <title>掲示板</title>
-<link href="tweet.css" rel="stylesheet">
+<link href="/css/tweet.css" rel="stylesheet">
 </head>
 <body>
 <span th:replace="menu"></span>
 
 	<hr>
 <h1>掲示板</h1>
-<table border="1" align="center">
-    <tr><td>投稿内容一覧</td><td>投稿日</td><td>いいね</td></tr>
-	<tr th:each="tweet, i:${tweets}">
-		<td th:text="${tweet.tweet}"></td>
+<table align="center">
+ 	<tr th:each="tweet, i:${tweets}">
+	    <td th:each="user, i3:${users}" th:if="${i.index == i3.index}" class="userName">
+	    <span th:text="${user}"></span>
+	    </td>
+		<th th:text="${tweet.tweet}"></th>
 		<td th:text="${tweet.date}"></td>
 		<td th:each="heart, i2:${hearts}" th:if="${i.index == i2.index}">
         <th:block th:if="${heart == false}">
 		   <a th:href="'/like/'+${tweet.code}">&#9825;</a>
 		</th:block>
 		<th:block th:unless="${heart == false}">
-		<a th:href="'/like/'+${tweet.code}" style="color:red" id="hart">&#9829;</a>
+		<a th:href="'/like/'+${tweet.code}" style="color:red">&#9829;</a>
         </th:block>
        <span th:text="${tweet.likes}"></span>
  		</td>
 	</tr>
-<a href="/tweet/add">新規投稿作成</a>
 </table>
+<table>
+<form action="/tweet/add" method="post">
+<tr><td class="text"><textarea name="tweet"></textarea></td>
+<td><input type="submit" value="投稿"></td>
+<tr>
+</form></table>
+
+
 </body>
 </html>
